fix broken inputs height

--- a/UI/src/app/components/comfy/comfy.component.scss
+++ b/UI/src/app/components/comfy/comfy.component.scss
@@ -366,7 +366,7 @@ article {
 
 .filter-by-name + a {
   position: absolute;
-  top: 96px;
+  top: 75px;
   left: 10px;
 }
 
