--- a/UI/src/app/styles/material.scss
+++ b/UI/src/app/styles/material.scss
@@ -105,6 +105,10 @@ button.mat-flat-button.mat-button-base {
 
   }
 
+  &.mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0 0 6px;
+  }
+
   &.mat-focused {
     .mat-form-field-outline-thick {
       border-color: $cdm-grey-light;
@@ -116,6 +120,10 @@ button.mat-flat-button.mat-button-base {
   }
 
   &.search-by-name {
+    .mat-form-field-appearance-outline .mat-form-field-infix {
+      padding: 2px 0 8px 0;
+    }
+
     .mat-form-field-outline {
       box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
 
@@ -126,10 +134,6 @@ button.mat-flat-button.mat-button-base {
       }
     }
   }
-}
-
-.mat-form-field-appearance-outline .mat-form-field-infix {
-  padding: 0 0 6px;
 }
 
 .vocabulary-config-tabs .mat-tab-body .mat-tab-body-content {
